--- a/src/style.css
+++ b/src/style.css
@@ -24,42 +24,33 @@
   margin: 10px;
 }
 
-#Trump,
+#Rep,
 .gop-votes {
   background-color: rgba(255, 0, 0, 0.75);
 }
 
-#Biden,
-#Clinton,
+#Dem,
 .dem-votes {
   background-color: rgba(0, 70, 255, 0.75);
 }
 
-#Johnson,
-#Jorgensen,
+#Lib,
 .lib-votes {
   background-color: rgba(255, 215, 0, 0.75);
 }
 
-#Hawkins,
-#Stein,
+#Grn,
 .grn-votes {
   background-color: rgba(0, 200, 0, 0.75);
 }
 
-#McMullin,
-#West,
+#Ind,
 .ind-votes {
   background-color: #d3d3d3;
 }
 
 .candidate img {
   height: 100px;
-}
-
-.candidate#Johnson img,
-.candidate#McMullin img {
-  width: 105px;
 }
 
 .electoralVotesWrapper {
