--- a/src/style.scss
+++ b/src/style.scss
@@ -28,27 +28,27 @@
   }
 }
 
-#Rep,
+#Trump,
 .gop-votes {
   background-color: rgba(255, 0, 0, 0.75);
 }
 
-#Dem,
+#Biden,
 .dem-votes {
   background-color: rgba(0, 70, 255, 0.75);
 }
 
-#Lib,
+#Oliver,
 .lib-votes {
   background-color: rgba(255, 215, 0, 0.75);
 }
 
-#Grn,
+#Stein,
 .grn-votes {
   background-color: rgba(0, 200, 0, 0.75);
 }
 
-#Ind,
+#Kennedy,
 .ind-votes {
   background-color: #d3d3d3;
 }
