upgrade: allow for passing in of vote percentages, handle prop errors

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,18 @@
 .electoral-college-root {
   font-family: Helvetica;
+
+  &.data-mode-auto {
+    .state-control {
+      .state {
+        cursor: default;
+      }
+    }
+
+    path:hover,
+    circle:hover {
+      cursor: default;
+    }
+  }
 }
 
 .candidatesWrapper {
